# bench-pydantic-marsh

./: pyproject.toml
bench/: bench_all.py  memory_marshamallow.py  memory_msgspec.py  memory_pydantic.py
